--- a/.github/workflows/supadupa.yml
+++ b/.github/workflows/supadupa.yml
@@ -1,4 +1,4 @@
-name: Lint Code
+name: Python Lint
 
 on:
   pull_request:
@@ -14,13 +14,13 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
-          node-version: '18'
+          python-version: '3.x'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install flake8
+        run: python -m pip install flake8
 
-      - name: Run ESLint
-        run: npm run lint
+      - name: Run flake8
+        run: flake8 .
