--- a/.github/workflows/supadupa.yml
+++ b/.github/workflows/supadupa.yml
@@ -1,10 +1,15 @@
 name: Python Lint
 
 on:
-  pull_request:
-    branches: [ main ]
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - linterTest
+  pull_request:
+    branches:
+      - main
+      - linterTest
+
 
 jobs:
   lint:
