--- a/.github/workflows/supadupa.yml
+++ b/.github/workflows/supadupa.yml
@@ -1,31 +1,17 @@
-name: Python Lint
+name: Super-Linter
 
-on:
-  push:
-    branches:
-      - main
-      - linterTest
-  pull_request:
-    branches:
-      - main
-      - linterTest
-
+on: push
 
 jobs:
-  lint:
+  super-lint:
+    name: Lint code base
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+      - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-
-      - name: Install flake8
-        run: python -m pip install flake8
-
-      - name: Run flake8
-        run: flake8 .
+      - name: Run Super-Linter
+      uses: github/super-linter@v3
+      env:
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
