--- a/.github/workflows/python-node-ci.yml
+++ b/.github/workflows/python-node-ci.yml
@@ -57,5 +57,8 @@ jobs:
       - name: Make deploy.sh executable
         run: chmod +x ./deploy.sh
 
+      - name: Verify permissions
+        run: ls -l ./deploy.sh
+
       - name: Deploy Application
         run: ./deploy.sh
